# unix69_webpage_frontend

./: .gitignore  asset-manifest.json  generate-tree.js  index.html  package.json  resources-tree.json
.github/workflows/: deploy.yml
public/: index.html  resources-tree.json
public/resources/Database/MongoDB/Guides/: MongoDB-4.4.15-Community-Installation-Guide.docx
public/resources/Programming Languages/ASM x86/Examples and Templates/: matr.asm
public/resources/Programming Languages/ASM x86/Lectures/: a00-CourseIntro.pptx
public/resources/Programming Languages/Android SDK/Lectures/: a02-GradleAndroid.pptx
public/resources/Programming Languages/Bash/Lectures/: a08-ArchitecturalPatterns.pptx
public/resources/Programming Languages/Bash/Scripts/: active-only-boot-service.sh  all-boot-service.sh
public/resources/Programming Languages/Java/Lectures/: J02-JavaBasics.pptx  J03-JavaInheritance.pptx  J07-Java Exceptions.pptx  J12 JUnit.ppt  a11-Navigation.pptx
public/resources/Programming Languages/Python/Examples and Templates/NoveltyDetectionFramework/MultiAgentSystem/: CMakeLists.txt
public/resources/Programming Languages/Python/Examples and Templates/NoveltyDetectionFramework/MultiAgentSystem/include/: IMongoDriverAgentInterface.h  TcAgentSystem.h  TcColors.h  TcLinearRegressor.h
public/resources/Programming Languages/Python/Examples and Templates/NoveltyDetectionFramework/MultiAgentSystem/include/Agent/: TcAgent.h
public/resources/Programming Languages/Python/Examples and Templates/NoveltyDetectionFramework/MultiAgentSystem/source/: IMongoDriverAgentInterface.cpp
public/resources/Programming Languages/Python/Examples and Templates/NoveltyDetectionFramework/MultiAgentSystem/source/Agent/: IAgent.cpp  TcAgentStatus.cpp
public/resources/Programming Languages/Python/Snippet/: 12Feb_Esercizio2.py
public/resources/Programming Languages/c#/Lectures/: 21 - Multithreading.ppt
public/resources/Programming Languages/c++/Lectures/: 06 - composizione di oggetti.ppt  07 - ereditarietaì€ e polimorfismo.ppt  09 - programmazione generica.ppt  11 - uso di librerie.ppt  15 - la classe thread.ppt  17 - condition variable.ppt
public/resources/Programming Languages/html/Lectures/: a06-AndroidThreading.pptx
resources/Operating Systems/Linux/os161/Lab/: lab-os161-2017-1.html
resources/Operating Systems/WIndows/Batch/Scripts/: script.bat
resources/Programming Languages/ASM x86/Examples and Templates/: int.asm  io.asm  scanf.asm
resources/Programming Languages/ASM x86/Lectures/: a05-JetpackCompose.pptx
resources/Programming Languages/Android SDK/Lectures/: a10-DependencyInjection.pptx
resources/Programming Languages/Bash/Lectures/: a04-Activities.pptx
resources/Programming Languages/Bash/Scripts/: set-file-permissions-by-user.sh
resources/Programming Languages/Bash/Scripts/git/: change-branch-git.sh  setup-repository-git.sh  synch-remote-git.sh
resources/Programming Languages/Bash/Scripts/ngrok/: end-ngrok.sh  install-ngrok-linux-amd64.sh  install-ngrok.sh  start-ngrok.sh  verify-ngrok.sh
resources/Programming Languages/Bash/Scripts/open-vpn/: disconnect-open-vpn.sh  get-all-ovpn-openvpn.sh  get-credential-openvpn.sh  install-open-vpn.sh  openvpn-link  verify-ovpn-file-open-vpn.sh  verify-state-open-vpn.sh
resources/Programming Languages/Bash/Scripts/ssh/: install-enable-ssh-server.sh  restart-ssh.sh  start-ssh-server.sh  verify-ssh-clients.sh  verify-ssh-server.sh
resources/Programming Languages/Java/Lectures/: J01 Java Environment.ppt  J04-Java Generics.pptx  J05-Java Collections.pptx  J09 Java IO.ppt  J10 Java Threads.ppt  J11.a Java Swing.ppt  a09-DataLayer.pptx
resources/Programming Languages/Python/Guides/: Python-Installation-Guide.docx
resources/Programming Languages/Python/Snippet/: main_example.py
resources/Programming Languages/c#/Lectures/: 19 - c#intro.ppt  20 - WPF.ppt
resources/Programming Languages/c++/Lectures/: 08 - funzioni e operatori.ppt  10 - c++ stl.ppt  12 - programmazione concorrente.ppt  13 - sincronizzazione.ppt  14 - concorrenza ad alto livello in c++.ppt  16 - mutua esclusione e operazioni atomiche.ppt  18 - comunicazione tra processi.ppt
resources/Programming Languages/c/Knowledge/: Lezione 2_ Struttura Programma C.docx  Lezione 3_ Istruzioni, Tipi, Dichiarazioni, Variabili, Operatori.docx  Lezione 4_ Istruzioni Condizionali, Cicli, Funzioni ed Array_.docx
resources/Programming Languages/html/Examples/: website.html
resources/Programming Languages/html/Lectures/: a01-Kotlin.pptx  a03-AndroidIntroduction.pptx  a07-Coroutines.pptx
src/: Home.css  Home.js  cal_api_key  index.js
src/components/: Consulting.js  Contacts.js  CookieBanner.js  Footer.css  Footer.js  GitHubHighlights.css  GitHubHighlights.js  Header.js  HeaderContactInfo.css  HeaderContactInfo.js  HeaderInfo.css  HeaderInfo.js  HeaderNavigator.css  HeaderNavigator.js  Languages.css  Languages.js  Lessons.css  Lessons.js  MacroSections.css  MacroSections.js  Profile.css  Profile.js  ProfileTechnologies.js  Repositories.css  Repositories.js  RepositoriesSearchBar.css  RepositoriesSearchBar.js  Repository.css  Repository.js  RepositoryDefaults.js  RepositoryErrors.js  RepositoryPreview.css  RepositoryPreview.js  RepositoryUrls.js  TechCard.js  WelcomeMessage.css  WelcomeMessage.js  i18n.js  useCookieConsent.js
src/components/hooks/: useGitHubRepos.js
src/data/: LanguagesData.js  ProfileData.js
static/css/: main.18af9e12.css  main.18af9e12.css.map  main.691ff2f8.css  main.691ff2f8.css.map
static/js/: main.653ff667.js.LICENSE.txt  main.766cd87b.js  main.766cd87b.js.LICENSE.txt  main.af17d7c3.js
(+1217 files in other folders)
